--- a/Portfolio - KNearest neighbors.ipynb
+++ b/Portfolio - KNearest neighbors.ipynb
@@ -19,7 +19,9 @@
    "source": [
     "## **Description:**\n",
     "\n",
-    "A telecommunications provider has segmented its customer base by service usage patterns, categorizing the customers into four groups. If demographic data can be used to predict group membership, the company can customize offers for individual prospective customers. This is a classification problem. That is, given the dataset,  with predefined labels, we need to build a model to be used to predict class of a new or unknown case. "
+    "A telecommunications provider has segmented its customer base by service usage patterns, categorizing the customers into four groups. The company wants to customize offers for individual prospective customers using demographic data which can be used to predict group membership. \n",
+    "\n",
+    "The objective of this work is to train a classification model, given the dataset with predefined labels to predict class of a new or unknown case. "
    ]
   },
   {
